--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,8 +1,8 @@
 :root {
-  --md-primary-fg-color: #28cb8f;
+  --md-primary-fg-color: #19dda5;
   --md-accent-fg-color: #cb2864;
 }
 
 .md-header {
-  background-color: #2E3238;
+  background-color: #1d2628;
 }
