re-organize documentation
* Reworded a lot of text
* Improved security page
* Move out more security sensitive information to internal handbook
* Add day and night mode switch

Signed-off-by: Alexander Trost <galexrt@googlemail.com>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -6,3 +6,11 @@
 .md-header {
   background-color: #1d2628;
 }
+
+[data-md-color-primary="koor"] {
+  --md-primary-fg-color: #19dda5;
+}
+
+[data-md-color-primary="koor-dark"] {
+  --md-primary-fg-color: #119671;
+}
